Mise à jour de la structure HTML : ajout d'une section de bannière avec un titre et un paragraphe descriptif

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>>Mon site Web</h1>
+        <h1></h1>
         <nav>
             <a>Accueil</a>
             <a>A propos</a>
@@ -15,7 +15,14 @@
             <a>Contact</a>
         </nav>
     </header>
-    <main>Section principale</main>
+    <main>
+        <section id="banner">
+            <h1>Mon premier site web</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ut aut molestias labore, molestiae numquam voluptates totam itaque id tempora accusamus harum maxime consectetur nisi. Fugit at perspiciatis animi ipsam!
+            </p>
+        </section>
+    </main>
     <footer>Bas de page</footer>
 </body>
 
