--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ut aut molestias labore, molestiae numquam voluptates totam itaque id tempora accusamus harum maxime consectetur nisi. Fugit at perspiciatis animi ipsam!
             </p>
         </section>
+        <section id="features">
+            <div>
+                <img src="pic.jpg" alt="">
+                <h3>titre</h3>
+                <p></p>
+            </div>
+            <div>
+                <img src="pic.jpg" alt="">
+                <h3>titre</h3>
+                <p></p>
+            </div>
+            <div>
+                <img src="pic.jpg" alt="">
+                <h3>titre</h3>
+                <p></p>
+            </div>
+        </section>
     </main>
     <footer>Bas de page</footer>
 </body>
