Ajout de nouvelles fonctionnalité  - images HTML5, CSS3 et JS  - inscription newsletter

--- a/index.html
+++ b/index.html
@@ -24,20 +24,27 @@
         </section>
         <section id="features">
             <div>
-                <img src="pic.jpg" alt="">
-                <h3>titre</h3>
-                <p></p>
+                <img src="./html.png" alt="">
+                <h3>HTML5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In laborum, harum ad recusandae saepe ipsum numquam consectetur eos sapiente et eius eveniet corporis dicta nisi amet cum doloribus velit dolores!</p>
             </div>
             <div>
-                <img src="pic.jpg" alt="">
-                <h3>titre</h3>
-                <p></p>
+                <img src="./css.png" alt="">
+                <h3>CSS3</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias omnis laboriosam expedita dolor molestiae voluptatem voluptate minima tempore eligendi, vel sed fugit dolorum ipsam doloremque esse deleniti aperiam a hic?</p>
             </div>
             <div>
-                <img src="pic.jpg" alt="">
-                <h3>titre</h3>
-                <p></p>
+                <img src="./js.png" alt="">
+                <h3>JS</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque ex neque, aliquid saepe iste eaque vero voluptatem vitae? Nulla error quia molestiae perferendis optio reiciendis temporibus eveniet nihil nam?</p>
             </div>
+        </section>
+        <section id="newsletter">
+            <h1>Inscrivez vous à ma newsletter</h1>
+            <form>
+                <input type="email" placeholder=""Enter Email...>
+                <button type="submit">M'inscrire</button>
+            </form>
         </section>
     </main>
     <footer>Bas de page</footer>
