Placement de la newsletter dans le footer

--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque ex neque, aliquid saepe iste eaque vero voluptatem vitae? Nulla error quia molestiae perferendis optio reiciendis temporibus eveniet nihil nam?</p>
             </div>
         </section>
+    </main>
+    <footer>
         <section id="newsletter">
             <h1>Inscrivez vous à ma newsletter</h1>
             <form>
                 <input type="email" placeholder=""Enter Email...>
-                <button type="submit">M'inscrire</button>
+                <button type="submit">
+                    M'inscrire
+                </button>
             </form>
         </section>
-    </main>
-    <footer>Bas de page</footer>
+    </footer>
 </body>
 
 </html>
