Correction d'erreur de placement

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
         <section id="newsletter">
             <h1>Inscrivez vous à ma newsletter</h1>
             <form>
-                <input type="email" placeholder=""Enter Email...>
+                <input type="email" placeholder="Enter Email..."/>
                 <button type="submit">M'inscrire</button>
             </form>
         </section>
     </main>
-    <footer>Bas de page</footer>
+    <footer>
+        <p>Un texte personnalisé</p>
+    </footer>
 </body>
 
 </html>
